--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="contenu">
         <div class="box">
             <div class="imbox">
-                <img src="Experts/cznburak.jpg">
+                <img src="experts/cznburak.jpg">
             </div>
             <br><br>
             <div class="text">
@@ -114,7 +114,7 @@
         </div>
         <div class="box">
             <div class="imbox">
-                <img src="Experts/Nusret.jpg">
+                <img src="experts/Nusret.jpg">
             </div>
             <br><br>
             <div class="text">
